# webauth

./: .cvsignore  .gitignore  CHANGES  HACKING  INSTALL  LICENSE  MANIFEST  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen  config-mod.h.in  config.h.in  configure  configure.ac  mod-config.h.in  webauth_3.6.1.orig.tar.gz.delta  webauth_3.6.1.orig.tar.gz.id  webauth_3.6.2.orig.tar.gz.delta  webauth_3.6.2.orig.tar.gz.id  webauth_3.7.0.orig.tar.gz.delta  webauth_3.7.0.orig.tar.gz.id  webauth_3.7.1.orig.tar.gz.delta  webauth_3.7.1.orig.tar.gz.id  webauth_3.7.2.orig.tar.gz.delta  webauth_3.7.2.orig.tar.gz.id  webauth_3.7.3.orig.tar.gz.delta  webauth_3.7.3.orig.tar.gz.id  webauth_3.7.4.orig.tar.gz.delta  webauth_3.7.4.orig.tar.gz.id  webauth_4.0.0.orig.tar.gz.delta  webauth_4.0.0.orig.tar.gz.id  webauth_4.0.0~alpha1.orig.tar.gz.delta  webauth_4.0.0~alpha1.orig.tar.gz.id  webauth_4.0.0~alpha2.orig.tar.gz.delta  webauth_4.0.0~alpha2.orig.tar.gz.id  webauth_4.0.1.orig.tar.gz.delta  (+47 more)
conf/: README  sample-webauth.conf  stanford-ldap.conf  stanford-webauth.conf
conf/debian/: webauth.conf  webauth.load  webauthldap.conf  webauthldap.load  webkdc.conf  webkdc.load
debian/: NEWS.Debian  changelog  control  copyright  libapache2-mod-webauth.NEWS  libapache2-mod-webauth.README.Debian  libapache2-mod-webauth.apache2  libapache2-mod-webauth.dirs  libapache2-mod-webauth.doc-base  libapache2-mod-webauth.docs  libapache2-mod-webauth.examples  libapache2-mod-webauth.install  libapache2-mod-webauth.postinst  libapache2-mod-webauth.postrm  libapache2-mod-webauth.prerm  libapache2-mod-webauthldap.README.Debian  libapache2-mod-webauthldap.apache2  libapache2-mod-webauthldap.docs  libapache2-mod-webauthldap.examples  libapache2-mod-webauthldap.install  libapache2-mod-webauthldap.postinst  libapache2-mod-webauthldap.postrm  libapache2-mod-webauthldap.prerm  libapache2-mod-webkdc.README.Debian  libapache2-mod-webkdc.apache2  libapache2-mod-webkdc.install  libapache2-mod-webkdc.postinst  libapache2-mod-webkdc.postrm  libapache2-mod-webkdc.prerm  libapache2-webauth.NEWS  libapache2-webauth.README.Debian  libapache2-webauth.doc-base  libapache2-webauth.docs  libapache2-webauth.examples  libapache2-webauth.install  libapache2-webauth.postinst  libapache2-webauth.postrm  libapache2-webauth.prerm  libapache2-webkdc.NEWS.Debian  libapache2-webkdc.README.Debian  (+37 more)
debian/source/: lintian-overrides  local-patch-header
debian/upstream/: signing-key.asc
doc/: addEncryptionKey.rng  addKeyResponse.rng  auth-post  coding-style  coding-style-build  coding-style-c  coding-style-doc  cookie-formats  credAuthResponse.rng  doxygen.cfg  encryptedCredAuth.rng  install-spnego  install-webkdc  install.txt  mod_webauth.html.en  mod_webauth.xml  mod_webauthldap.html.en  mod_webauthldap.xml  mod_webkdc.html.en  mod_webkdc.xml  passwordAuthResponse.rng  preauth-get  protocol-overview  protocol.xml  sendEncryptionKeys.rng  sendKeysResponse.rng  skel.rng  test-plan  userPasswordAuth.rng  userPasswordAuth.xsd  userauth  webauth-stanford.conf  webauth.conf  webauth.html  webauthv3_spec.html  webkdc-implementation  webkdc-protocol  weblogin-config  weblogin-flow
doc/old/: encryptedCredAuth.rng  encryptedCredAuth.xsd  errorResponse.rng  skel.xsd  userPasswordAuth.rng  webkdc-implementation  webkdc-protocol
docs/: design-pwchange  install-multifactor  install-spnego  install-stanford  install-webkdc  mod_webauth.html.en  mod_webauth.xml  mod_webauthldap.html.en  mod_webauthldap.xml  mod_webkdc.html.en  mod_webkdc.xml  protocol.html  protocol.txt  protocol.xml  test-plan  userauth  weblogin-config  weblogin-cookies  weblogin-flow  weblogin-testing
docs/diagrams/: weblogin-flow.dia
docs/scripts/: clean-apache-manual
include/: mkheader  webauth.h  webauth.h.in
include/webauth/: basic.h  defines.h.in  factors.h  keys.h  krb5.h  tokens.h  util.h  was.h  webkdc.h
lib/: .cvsignore  Makefile.vc  apr-buffer.c  attr-decode.c  attr-encode.c  attrs.c  base64.c  context.c  encoding-rules  errors.c  factors.c  file-io.c  hex.c  internal.h  key.c  keyring.c  keys.c  krb5-heimdal.c  krb5-mit.c  krb5.c  libwebauth.map  libwebauth.pc.in  libwebauth.sym  mapfile  misc.c  mkheader  random.c  rules-cache.c  rules-keyring.c  rules-krb5.c  rules-tokens.c  token-crypto.c  token-decode.c  token-encode.c  token-merge.c  token.c  tokens.c  userinfo-json.c  userinfo-remctl.c  userinfo-xml.c  (+10 more)
m4/: apache.m4  apr.m4  aprutil.m4  crypto.m4  curl.m4  gssapi.m4  int32.m4  jansson.m4  krb5.m4  ldap.m4  libgcc.m4  openssl.m4  remctl.m4  sident.m4  ssl.m4
modules/: mod-config.h.in
modules/ldap/: config.c  mod_webauthldap.c  mod_webauthldap.h
modules/webauth/: config.c  krb5.c  mod_webauth.c  mod_webauth.h  util.c  webkdc.c
modules/webauthldap/: Makefile.vc  mod_webauthldap.c  mod_webauthldap.h
modules/webkdc/: acl.c  config.c  logging.c  mod_webkdc.c  mod_webkdc.h  token.acl  util.c
patches/: README  log-error-macro
perl/: Build.PL  Build.PL.in  MANIFEST  MANIFEST.SKIP  Makefile.PL.in  README  WebAuth.xs  test.pl  typemap
perl/WebKDC/: XmlElement.pm
perl/lib/: WebAuth.pm  WebAuth.xs  WebKDC.pm  WebLogin.pm
perl/t/: TODO  changepw.t  config.t  cookies.t  exception.t  factor-token.t  keyring.t  krb5.t  minimum-version.t  misc.t  page-pwchange.t  pending-expire.t  pod-spelling.t  pod.t  strict.t  token-decode.t  token-encode.t  web-request.t  web-response.t  webauth.t  webkdc.t  weblogin.t  xml.t
portable/: apache.h  apr.h  krb5-extra.c  krb5.h  mkstemp.c  system.h
src/: Makefile.in
src/bindings/: Makefile.in
src/libwebauth/: .cvsignore  Makefile.in  (+16 more)
tests/: .cvsignore  Makefile.in  TESTS  runtests.c
tools/: .cvsignore  Makefile.vc  clean-apache-manual  makedepend  mkheader  mkmanifest  mkpackage  wa_keyring.1  wa_keyring.c  wa_keyring.pod  webauth-make-tokens  weblogin-passcheck
util/: macros.h  messages.c  messages.h
weblogin/: login.fcgi  logout.fcgi  pwchange.fcgi
windows/: BUILD.txt  INSTALL.txt  buildenv.bat  config.h  krb5.ini  make_zip  sasl.reg  setup.bat  stanford-webauth.conf  webauth-ssl.conf
(+454 files in other folders)
